--- a/popup.html
+++ b/popup.html
@@ -81,6 +81,26 @@
       background-color: #f8f9fa;
       color: #6c757d;
     }
+
+    .duration-inputs {
+      display: flex;
+      gap: 5px;
+    }
+
+    .duration-inputs input {
+      flex: 1;
+    }
+
+    .duration-inputs select {
+      flex: 1;
+    }
+
+    .password-warning {
+      font-size: 12px;
+      color: #e74c3c;
+      text-align: center;
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
@@ -92,16 +112,20 @@
     <h3>Quick Block Website</h3>
     <input type="text" id="quickBlockUrl" placeholder="Enter website URL (e.g., facebook.com)">
     <select id="quickBlockMode">
-      <option value="normal">Normal Block</option>
-      <option value="strict">Strict Block</option>
+      <option value="normal">Normal Block (can unblock with password)</option>
+      <option value="strict">Strict Block (timer-based, cannot unblock)</option>
     </select>
     <div id="strictDurationDiv" style="display: none;">
-      <input type="number" id="strictHours" placeholder="Hours" min="1" max="8760">
-      <select id="strictUnit">
-        <option value="hours">Hours</option>
-        <option value="days">Days</option>
-        <option value="weeks">Weeks</option>
-      </select>
+      <div class="duration-inputs">
+        <input type="number" id="strictHours" placeholder="Amount" min="1" max="8760">
+        <select id="strictUnit">
+          <option value="minutes">Minutes</option>
+          <option value="hours">Hours</option>
+          <option value="days">Days</option>
+          <option value="weeks">Weeks</option>
+        </select>
+      </div>
+      <div class="password-warning">⚠️ Strict blocks cannot be removed until timer expires!</div>
     </div>
     <button id="addQuickBlock">Add Block</button>
   </div>
@@ -119,6 +143,7 @@
     <h3>Quick Actions</h3>
     <button id="openOptions">Open Full Settings</button>
     <button id="toggleIncognito">Toggle Incognito Block</button>
+    <button id="setPassword">Set Master Password</button>
   </div>
 
   <script src="popup.js"></script>
